# rs750

./: .travis.rosinstall  README.md
rs750/: CMakeLists.txt  package.xml
rs750_controller/: CMakeLists.txt  package.xml  setup.py
rs750_controller/cfg/: CourseController.cfg  SailController.cfg
rs750_controller/config/: course_controller.yaml  position_controllers.yaml
rs750_controller/include/rs750_controller/: course_controller.h  hardware.h
rs750_controller/launch/: control.launch  course_control.launch  course_control_node.launch
rs750_controller/nodes/: course_controller  sail_controller  sail_controller_config
rs750_controller/scripts/: ex_move_box_course.py  sail_controller.py  twist_translate.py
rs750_controller/src/: course_controller.cpp  course_controller_node.cpp  hardware.cpp
rs750_description/: CMakeLists.txt  package.xml
rs750_description/launch/: description.launch
rs750_description/urdf/: rs750.gazebo  rs750.sdf  rs750.urdf  rs750.urdf.xacro  rs750_anemometer.xacro  rs750_camera.xacro  rs750_imu.xacro  rs750_inertials.xacro  rs750_magnetic.xacro  rs750_materials.xacro  rs750_rig.gazebo  rs750_rig.xacro  rs750_test_rig.gazebo  rs750_test_rig.urdf.xacro
rs750_gazebo/: CMakeLists.txt  NOTES.md  package.xml
rs750_gazebo/config/: rs750.param  sailboat_mission.txt
rs750_gazebo/launch/: rs750_empty_world.launch  rs750_ocean_world.launch  rs750_spawn.launch
rs750_gazebo/models/mumbles_head/: model.sdf
rs750_gazebo/models/rs750/: gazebo.material  model.config  model.sdf
rs750_gazebo/scripts/: twist_translate.py
rs750_gazebo/worlds/: mumbles_head.world  sailing_course.sdf  triangle_course.sdf  triangle_course_ocean.world
rs750_viz/: CMakeLists.txt  package.xml
rs750_viz/config/: model.rviz  robot.perspective
rs750_viz/launch/: view_model.launch  view_robot.launch  view_robot_camera.launch  view_robot_monitor.launch
rs750_viz/rviz/: model.rviz  sail_sim.perspective
