<?xml version="1.0"?>
<package format="2">
    <name>rs750</name>
    <version>0.1.0</version>
    <description>Meta-package for a Racing Sparrow 750 yacht</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>GPLv3</license>
    <url type="website">https://github.com/srmainwaring/rs750</url>
    <url type="repository">https://github.com/srmainwaring/rs750</url>
    <url type="bugtracker">https://github.com/srmainwaring/rs750/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>rs750_controller</exec_depend>
    <exec_depend>rs750_description</exec_depend>
    <exec_depend>rs750_gazebo</exec_depend>
    <exec_depend>rs750_viz</exec_depend>
</package>
