<?xml version="1.0"?>
<package format="2">
    <name>rs750_gazebo</name>
    <version>0.0.0</version>
    <description>Gazebo simulation launch files a RS750 yacht</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>GPLv3</license>
    <url type="website">https://github.com/srmainwaring/rs750</url>
    <url type="repository">https://github.com/srmainwaring/rs750</url>
    <url type="bugtracker">https://github.com/srmainwaring/rs750/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>hector_gazebo_plugins</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rs750_description</exec_depend>

    <export>
        <gazebo_ros gazebo_media_path="${prefix}" />
        <gazebo_ros gazebo_model_path="${prefix}/models" />
    </export>
</package>
